# gddrescue_mapfile_to_dfxml

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTE.md  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
figs/: Makefile  data_flow.dot
gddrescue_mapfile_to_dfxml/: __init__.py  cli.py  intact_byte_run_index.py  recoverability_dfxml.py  recoverability_report.py
src/: dfxml  gddrescue_mapfile_to_dfxml.py  intact_byte_run_index.py  make_file_recoverability_dfxml.py  report_file_recoverability_html.py
tests/: Makefile
tests/damage_sample_1/: Makefile  README.md  damage_sample.img.mapfile  dfxml  diskimage.dfxml  diskimage.report.html  diskimage.report.md  file_recoverability.dfxml  file_recoverability.report.html  file_recoverability.report.md  list_filenames.py  non_recoverable_files.txt  sample_file_system.dfxml  sample_file_system_dfxml.py
tests/multisession_cd_sample_1/: Makefile  README.md  disk.img.mapfile  diskimage.dfxml  diskimage.report.html  diskimage.report.md
