# This software was developed at the National Institute of Standards
# and Technology by employees of the Federal Government in the course
# of their official duties. Pursuant to title 17 Section 105 of the
# United States Code this software is not subject to copyright
# protection and is in the public domain. NIST assumes no
# responsibility whatsoever for its use by other parties, and makes
# no guarantees, expressed or implied, about its quality,
# reliability, or any other characteristic.
#
# We would appreciate acknowledgement if the software is used.

[metadata]
name = gddrescue_mapfile_to_dfxml
version = attr: gddrescue_mapfile_to_dfxml.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = Mapping of GNU ddrescue Mapfile to DFXML
license_files = LICENSE.md
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajnelson-nist/gddrescue_mapfile_to_dfxml
classifiers =
    Development Status :: 3 - Alpha
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
install_requires =
    dfxml
    humanfriendly
    portion
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    gddrescue_dfxml_recoverability_dfxml = gddrescue_mapfile_to_dfxml.recoverability_dfxml:main
    gddrescue_dfxml_recoverability_report = gddrescue_mapfile_to_dfxml.recoverability_report:main
    gddrescue_mapfile_to_dfxml = gddrescue_mapfile_to_dfxml.cli:main

[options.package_data]
gddrescue_mapfile_to_dfxml = py.typed

[flake8]
extend-ignore =
  E203
  E501
